--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "react-ecom",
   "version": "0.1.0",
   "private": true,
+  "start": "node app.js",
+  "dev": "nodemon app.js",
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
