--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-ecom",
   "version": "0.1.0",
   "private": true,
+  
   "start": "node app.js",
   "dev": "nodemon app.js",
   "dependencies": {
@@ -12,6 +13,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "body-parser": "^1.20.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
